[gd_scene load_steps=7 format=2]

[ext_resource path="res://BasePlant.gd" type="Script" id=1]
[ext_resource path="res://Assets/flowers.png" type="Texture" id=2]
[ext_resource path="res://Assets/pop_effect.wav" type="AudioStream" id=3]

[sub_resource type="Curve" id=1]
max_value = 6.0
_data = [ Vector2( 0, 3.13636 ), 0.0, -0.173056, 0, 0, Vector2( 0.981013, 5.89091 ), -1.8281, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 1.0
orbit_velocity_random = 0.0
linear_accel = -100.0
radial_accel = 100.0
tangential_accel = 100.0
scale_curve = SubResource( 2 )

[node name="BasePlant" type="Node2D"]
script = ExtResource( 1 )

[node name="ProductionTimer" type="Timer" parent="."]

[node name="GrowthTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 5
hframes = 3

[node name="PopEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="PopParticles" type="Particles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
explosiveness = 0.5
randomness = 0.5
process_material = SubResource( 3 )
[connection signal="timeout" from="GrowthTimer" to="." method="_on_GrowthTimer_timeout"]
